[package]
name = "leptos_cloudflare_worker"
version = { workspace = true }
edition = "2021"
authors = ["Raik Rohde"]
license = "MIT"
repository = "https://github.com/leptos-rs/leptos"
description = "CloudFlare Woker integrations for the Leptos web framework."

[dependencies]
worker = "0.0.17"
futures = "0.3"
leptos = { workspace = true, features = ["ssr"] }
leptos_meta = { workspace = true, features = ["ssr"] }
leptos_router = { workspace = true, features = ["ssr"] }
leptos_integration_utils = { workspace = true }
serde_json = "1"
parking_lot = "0.12.1"
regex = "1.7.0"
tracing = "0.1.37"
